--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ debugpy==1.6.6
 decorator==5.1.1
 executing==1.2.0
 future==0.18.3
+imageio==2.27.0
 importlib-metadata==6.0.0
 ipykernel==6.21.2
 ipython==8.10.0
 jedi==0.18.2
+joblib==1.2.0
 jupyter_client==8.0.2
 jupyter_core==5.2.0
 kiwisolver==1.4.4
@@ -23,6 +25,7 @@ packaging==23.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.5.0
 pkg_resources==0.0.0
 platformdirs==3.0.0
 prompt-toolkit==3.0.36
@@ -33,9 +36,11 @@ Pygments==2.14.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pyzmq==25.0.0
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
-sklearn==0.0.post1
 stack-data==0.6.2
+threadpoolctl==3.1.0
 torch==1.5.0
 tornado==6.2
 traitlets==5.9.0
