--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asttokens==2.2.1
 backcall==0.2.0
+black==23.3.0
+click==8.1.3
 comm==0.1.2
 cycler==0.11.0
 debugpy==1.6.6
@@ -18,11 +20,15 @@ kiwisolver==1.4.4
 llvmlite==0.31.0
 matplotlib==3.1.1
 matplotlib-inline==0.1.6
+mypy-extensions==1.0.0
 nest-asyncio==1.5.6
 numba==0.48.0
 numpy==1.23.5
+opencv-python==4.5.3.56
 packaging==23.0
+pandas==2.0.0
 parso==0.8.3
+pathspec==0.11.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.5.0
@@ -35,14 +41,19 @@ pure-eval==0.2.2
 Pygments==2.14.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+pytz==2023.3
 pyzmq==25.0.0
 scikit-learn==1.2.2
 scipy==1.10.1
 six==1.16.0
 stack-data==0.6.2
 threadpoolctl==3.1.0
+tomli==2.0.1
 torch==1.5.0
 tornado==6.2
 traitlets==5.9.0
+tslearn==0.5.3.2
+typing_extensions==4.5.0
+tzdata==2023.3
 wcwidth==0.2.6
 zipp==3.13.0
